Formulaires de connexion et d'inscription fonctionnels

--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://root:@localhost:3306/projet-musicotherapie?serverVersion=5.7"
+DATABASE_URL="mysql://root:@localhost:3306/projet-musicotherapie?serverVersion=mariadb-10.4.13"
