Formulaire de contact fonctionnel

--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,4 @@
 framework:
     mailer:
-        dsn: '%env(MAILER_DSN)%'
+        dsn: 'gmail+smtp://%env(MAIL_USER)%:%env(MAIL_PASSWORD)%@default'
+        
