--- a/.env.dev
+++ b/.env.dev
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://root:@localhost:3306/projet-musicotherapie?serverVersion=mariadb-10.4.13"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/projet-musicotherapie?serverVersion=mariadb-10.4.13"
