--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=876eccbd9ab8b822dca99cf39c999c57
 ###< symfony/framework-bundle ###
 
@@ -27,7 +28,7 @@ APP_SECRET=876eccbd9ab8b822dca99cf39c999c57
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:8000/projet-musicotherapie?serverVersion=5.7"
+# DATABASE_URL="mysql://root:@127.0.0.1:8000/projet-musicotherapie?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
