--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,6 +1,6 @@
 framework:
     mailer:
-        dsn: 'gmail+smtp://%env(MAIL_USER)%:%env(MAIL_PASSWORD)%@default'
+        dsn: '%env(MAILER_DSN)%'
         envelope:
             sender: '%env(MAIL_USER)%'
         headers:
